# Newbie-Lora-Training-on-Modal

./: .gitignore  AGENTS.md  LICENSE  README.md  README_ZH.md  manage.py  modal_newbie_train.py  pyproject.toml  requirements.txt  resize_dataset_1536.py  setup.ps1  setup.sh  tui_text_zh.py
configs/: example_lokr.toml  example_lora.toml
configs/jobs/: .gitkeep
docs/: setup-test-record.md
scripts/: __init__.py  billing.py  cli.py  config_flow.py  model_ops.py  preferences.py  remote_training.py  secret_config.py  training_core.py  training_flow.py  tui.py  volume_flow.py  volume_ops.py
