[project]
name = "modal-lora-training"
version = "0.1.0"
description = "Modal runner and TUI for NewBie-image LoRA/LoKr training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "modal>=1.0.0",
    "questionary>=2.0.1",
    "rich>=13.0.0",
    "toml>=0.10.2",
    "huggingface-hub>=0.23.0",
]

[tool.uv]
package = false
